deploy/base/longpoll/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: longpoll
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
